testsuite/gnatprove/tests/T623-013__output_checks/test.out
default command-line output
---------------------------
incr.adb:3:11: medium: overflow check might fail (e.g. when X = Integer'Last) [possible explanation: subprogram at line 1 should mention X in a precondition]

pretty output
-------------
incr.adb:3:11: medium: overflow check might fail (e.g. when X = Integer'Last) [possible explanation: subprogram at line 1 should mention X in a precondition]

one-line output
---------------
incr.adb:3:11: medium: overflow check might fail (e.g. when X = Integer'Last) [possible explanation: subprogram at line 1 should mention X in a precondition]

incorrect output value
----------------------
Try "gnatprove --help" for more information.
error: wrong argument for --output
